2013-05-18  Alexey Pavlov  <alexpux@gmail.com>  (tiny change)

	* w32/Makefile.am (libw32_a_SOURCES): Add compat/posixfcn.c.

	* configure.ac (OUTPUT_SYNC): Define for mingw32 target.

	* job.c (construct_command_argv_internal) <sh_cmds_dos>
	[WINDOWS32]: Add "move".  Fixes Savannah bug #30714.

	* guile.c: Move inclusion of makeint.h before gnumake.h.  This
	order must be observed when building Make, because gnumake.h must
	be included with GMK_BUILDING_MAKE defined, which makeint.h
	already does.  Otherwise, the linker will look for, and fail to
	find, gmk_* functions in some external dynamic library.

2013-05-17  Eli Zaretskii  <eliz@gnu.org>

	* main.c (prepare_mutex_handle_string): Define conditioned on
	OUTPUT_SYNC.

	* build_w32.bat: Copy config.h.W32 to config.h regardless of
	whether or not we are building from SCM.

2013-05-17  Paul Smith  <psmith@gnu.org>

	* configure.ac: Update version to 3.99.90.
	* NEWS: Ditto.

	* Source (*.[ch]): Remove TABs, use GNU coding styles.

	* ALL: Update copyright.

	* hash.c (CALLOC): Use xcalloc() to handle out of memory errors.

	* makeint.h: Prototype new unload_file() function.
	* load.c (unload_file): Create a function to unload a file.
	(struct load_list): Type to remember loaded objects.
	(loaded_syms): Global variable of remembered loaded objects so we
	can unload them later.  We don't have to remove from the list
	because the only time we unload is if we're about to re-exec.
	(load_object): Remove unneeded extra DLP argument.
	(load_file): Remove unneeded extra DLP argument.
	* filedef.h (struct file): Remove the DLP pointer and add the
	LOADED bit flag.  Saves 32/64 bytes per file, as this pointer is
	almost never needed.
	* read.c (eval): Set the new LOADED bit flag on the file.
	* file.c (rehash_file): Merge the loaded bitfield.
	* commands.c (execute_file_commands): Call unload_file() instead
	of dlclose() directly.

2013-05-14  Paul Smith  <psmith@gnu.org>
